hard-gists/5463830/run.log
=== Docker Run Log for 5463830 ===
Started at: Mi 29. Okt 15:42:22 CET 2025

[2025-10-29 15:42:22] START: Running container for 5463830
[2025-10-29 15:42:22] SUCCESS: Container 450deb4c1cbf391e7e7d0db4e381a7a931c7284797858cabe3a8bfedb4f75bd2 started for 5463830
=== Container logs for 5463830 ===
  File "/snippet.py", line 95
    except Exception, e:
           ^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 5463830 ===
[2025-10-29 15:42:24] INFO: Container 450deb4c1cbf391e7e7d0db4e381a7a931c7284797858cabe3a8bfedb4f75bd2 has stopped
